# mesa_3083_compute

./: CMakeLists.txt  LICENSE  README.md
scripts/: compare.sh  run.sh  run2.sh  run2_vulkan.sh  run3.sh  run_gl.sh  run_vulkan.sh
shaders/: shader.comp
src/: gl.c  main.cpp  shared.cpp  shared.h  vulkan.cpp
